# PandocAgda

./: .gitignore  LICENSE  PandocAgda.cabal  PandocAgda.hs  README  README.md  stack.yaml
examples/: Makefile  Simple.lagda
examples/html/: Simple.html
